/*
 * $Id: ChangeLog,v 1.4712 2005/12/16 22:39:06 oh1 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-12-16 23:51 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/regex.c
    * optimized HB_REGEXALL

2005-12-16 23:40 UTC+0100 Henryk Olkowski <oh1@op.pl>
  * source/ct/ctwin.c
  * source/rtl/gtapi.c
     ! hb_ctWFormat(): changes Tony Bretado are not quite correct.
       Updated for full compatibility with clipper CA-Tools and moved
       to WFORMAT() in ctwin.c

2005-12-07 08:51 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/macro.c
    * Minor correction

2005-12-16 11:06 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbcmd.c
  * xharbour/source/rdd/rddord.prg
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfntx/dbfntx1.c
    * ORDWILDSEEK() function (wrapper to dbOrderInfo())
      rewritten in C to reduce .prg level overhead

  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/workarea.c
    * added EOL at EOF

2005-12-16 04:42 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/regex.c
    * fixed HB_REGEXATX start position (before 0-based, now 1-based)
    + New HB_REGEXALL() function
      This function returns all occurrences from a regex search.
  + tests/regexall.prg
    + shows HB_RegExAll() capabilities

   Syntax:

   /*-------------------------------------------------------------------------
     2005-12-16 - Francesco Saverio Giudice
     HB_RegExAll( cRegex, cString, lCaseSensitive, lNewLine, nMaxMatches, nGetMatch, lOnlyMatch ) -> aAllRegexMatches

     This function return all matches from a Regex search.
     It is a mix from hb_RegEx() and hb_RegExAtX()

     PARAMETERS:
       cRegex         - Regex pattern string or precompiled Regex
       cString        - The string you want to search