@@ -1,5 +1,5 @@
 /*
- * $Id: hbextern.ch,v 1.20 2005/10/29 18:53:39 likewolf Exp $
+ * $Id: hbextern.ch,v 1.21 2005/11/19 19:12:23 ronpinkas Exp $
  */
 
 /*
@@ -678,7 +678,7 @@ EXTERNAL HB_THISARRAY
 
 EXTERNAL SECONDSCPU
 
-EXTERNAL HB_REGEXCOMP, HB_REGEX, HB_REGEXMATCH, HB_REGEXSPLIT, HB_REGEXATX
+EXTERNAL HB_REGEXCOMP, HB_REGEX, HB_REGEXMATCH, HB_REGEXSPLIT, HB_REGEXATX, HB_REGEXALL
 
 EXTERNAL HASH, HSETPARTITION, HGETPARTITION, HSETAUTOADD, HGETAUTOADD, ;
          HSETCASEMATCH, HGETCASEMATCH, HGETKEYAT, HGETVALUEAT, HGETPAIRAT, ;
